# rswd

./: .gitignore  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md
plans/: ARCHITECTURE.md
src/rswd/: __main__.py  config.py  download.py  library.py  log.py  search.py  util.py
src/rswd/backends/: base.py  orpheus.py  streamrip_.py
src/rswd/cli/: album.py  app.py  artist.py  daemon.py  library.py  serve.py  shell.py
src/rswd/db/: models.py  repository.py  schema.py
src/rswd/db/migrations/: v001_initial.sql
src/rswd/metadata/: acoustid_.py  lrclib.py  lyrics.py  musicbrainz_.py  replaygain.py
src/rswd/scheduler/: __init__.py
src/rswd/web/: app.py  deps.py  download_manager.py
src/rswd/web/routes/: config_.py  daemon.py  import_.py  library.py  missing.py  monitor.py  queue.py  search.py
src/rswd/web/static/css/: style.css
src/rswd/web/templates/: base.html
src/rswd/web/templates/config/: page.html
src/rswd/web/templates/daemon/: page.html
src/rswd/web/templates/import/: page.html  results.html
src/rswd/web/templates/missing/: page.html
src/rswd/web/templates/monitor/: page.html
src/rswd/web/templates/queue/: _task_status.html  _tasks.html  page.html
src/rswd/web/templates/search/: _download_status.html  _results.html  page.html
tests/: conftest.py  test_config.py  test_config_advanced.py  test_download.py  test_library.py  test_log.py  test_main.py  test_search.py  test_util.py
tests/test_backends/: test_base.py  test_orpheus.py  test_streamrip.py
tests/test_cli/: test_album.py  test_artist.py  test_daemon.py  test_library.py
tests/test_db/: test_edge_cases.py  test_repository.py  test_schema.py
tests/test_metadata/: test_acoustid.py  test_lrclib.py  test_lyrics.py  test_musicbrainz.py  test_replaygain.py
